# coinlapack

./: meson.build  readme.txt  upstream.wrap
SRC/: meson.build
